// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hand /> renders tiles 1`] = `
.emotion-0905tdc-Hand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

<div
  className="emotion-0"
>
  <Tile
    key="A1"
    letter="A"
  />
  <Tile
    key="B1"
    letter="B"
  />
</div>
`;

exports[`<Hand /> renders when no hand 1`] = `
.emotion-0905tdc-Hand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

<div
  className="emotion-0"
/>
`;
